--- a/anaylsexp2/analyse.Rmd
+++ b/anaylsexp2/analyse.Rmd
@@ -263,193 +263,197 @@ hist(playtime$playTime, xlab="Playtime (mins)", ylab="nombre de parties", main="
 
 ###Réponses aux questionnaires
 
+```{r echo=FALSE}
+DTFormCustom <- DTFormProcessInt[nb >= 0]
+```
+
 ####Q1: Profil des joueur
 
 ```{r echo=FALSE}
-barplot(table(DTForm$age), xlab="Age", ylab="Nombre de personnes", main="Répartition de la population par âge",las=2)
+barplot(table(DTFormCustom$age), xlab="Age", ylab="Nombre de personnes", main="Répartition de la population par âge",las=2)
 #barplot(table(DTForm$metier), xlab="Métier", ylab="Nombre de personnes", main="Répartition de la population par métier",las=2)
-barplot(table(DTForm$frequence), xlab="Fréquence", ylab="Nombre de personnes", main="Fréquence de jeu",las=2)
+barplot(table(DTFormCustom$frequence), xlab="Fréquence", ylab="Nombre de personnes", main="Fréquence de jeu",las=2)
 #barplot(table(DTForm$plateformes), xlab="Plateformes", ylab="Nombre de personnes", main="Répartition de la population par plateforme",las=2)
-barplot(table(DTForm$minecraft), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de Minecraft",las=2)
-barplot(table(DTForm$similaire), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de jeux émergents",las=2)
+barplot(table(DTFormCustom$minecraft), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de Minecraft",las=2)
+barplot(table(DTFormCustom$similaire), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de jeux émergents",las=2)
 ```
 
 ####Q2: Questionnaire sur les caractéristiques
 
 ```{r echo=FALSE}
-barplot(table(DTForm$agency1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez gardé le contrôle sur les événements de la partie",las=2)
-summary(DTForm$agency1 + 1)
-wilcox.test(DTForm$agency1 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$agency1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez gardé le contrôle sur les événements de la partie",las=2)
+summary(DTFormCustom$agency1 + 1)
+wilcox.test(DTFormCustom$agency1 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$agency2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé suivre un parcours prédéterminé",las=2)
-summary(DTForm$agency2 + 1)
-wilcox.test(DTForm$agency2 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$agency2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé suivre un parcours prédéterminé",las=2)
+summary(DTFormCustom$agency2 + 1)
+wilcox.test(DTFormCustom$agency2 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$agency3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous n'avez pas réussi à atteindre vos objectifs",las=2)
-summary(DTForm$agency3 + 1)
-wilcox.test(DTForm$agency3 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$agency3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous n'avez pas réussi à atteindre vos objectifs",las=2)
+summary(DTFormCustom$agency3 + 1)
+wilcox.test(DTFormCustom$agency3 + 1, mu = 3, alternative = "less")
 
-psych::alpha(cbind(DTForm$agency1 + 1, DTForm$agency2 + 1, DTForm$agency3 + 1), keys = c(1, -1, -1))
-
-
-barplot(table(DTForm$coherence1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez ressenti de la frustration face aux événements",las=2)
-summary(DTForm$coherence1 + 1)
-wilcox.test(DTForm$coherence1 + 1, mu = 3, alternative = "greater")
-
-barplot(table(DTForm$coherence2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Les événements de la partie vous ont parus incompréhensible",las=2)
-summary(DTForm$coherence2 + 1)
-wilcox.test(DTForm$coherence2 + 1, mu = 3, alternative = "greater")
-
-barplot(table(DTForm$coherence3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé chaotique",las=2)
-summary(DTForm$coherence3 + 1)
-wilcox.test(DTForm$coherence3 + 1, mu = 3, alternative = "greater")
-
-psych::alpha(cbind(DTForm$coherence1 + 1, DTForm$coherence2 + 1, DTForm$coherence3 + 1), keys = c(-1, -1, -1))
+psych::alpha(cbind(DTFormCustom$agency1 + 1, DTFormCustom$agency2 + 1, DTFormCustom$agency3 + 1), keys = c(1, -1, -1))
 
 
-barplot(table(DTForm$incertitude1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été surpris par les événements",las=2)
-summary(DTForm$incertitude1 + 1)
-wilcox.test(DTForm$incertitude1 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$coherence1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez ressenti de la frustration face aux événements",las=2)
+summary(DTFormCustom$coherence1 + 1)
+wilcox.test(DTFormCustom$coherence1 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$incertitude2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous saviez ce qui allait se passer avant que cela ne se passe",las=2)
-summary(DTForm$incertitude2 + 1)
-wilcox.test(DTForm$incertitude2 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$coherence2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Les événements de la partie vous ont parus incompréhensible",las=2)
+summary(DTFormCustom$coherence2 + 1)
+wilcox.test(DTFormCustom$coherence2 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$incertitude3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez eu peur de ne pas réussir à accomplir ce que vous vouliez",las=2)
-summary(DTForm$incertitude3 + 1)
-wilcox.test(DTForm$incertitude3 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$coherence3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé chaotique",las=2)
+summary(DTFormCustom$coherence3 + 1)
+wilcox.test(DTFormCustom$coherence3 + 1, mu = 3, alternative = "greater")
 
-psych::alpha(cbind(DTForm$incertitude1 + 1, DTForm$incertitude2 + 1, DTForm$incertitutde3 + 1), keys = c(1, -1, -1))
+psych::alpha(cbind(DTFormCustom$coherence1 + 1, DTFormCustom$coherence2 + 1, DTFormCustom$coherence3 + 1), keys = c(-1, -1, -1))
 
 
-barplot(table(DTForm$espace1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez trouvé la partie riche et variée",las=2)
-summary(DTForm$espace1 + 1)
-wilcox.test(DTForm$espace1 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$incertitude1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été surpris par les événements",las=2)
+summary(DTFormCustom$incertitude1 + 1)
+wilcox.test(DTFormCustom$incertitude1 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$espace2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes ennuyé durant la partie",las=2)
-summary(DTForm$espace2 + 1)
-wilcox.test(DTForm$espace2 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$incertitude2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous saviez ce qui allait se passer avant que cela ne se passe",las=2)
+summary(DTFormCustom$incertitude2 + 1)
+wilcox.test(DTFormCustom$incertitude2 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$espace3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez manqué de choses à voir ou à faire",las=2)
-summary(DTForm$espace3 + 1)
-wilcox.test(DTForm$espace3 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$incertitude3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez eu peur de ne pas réussir à accomplir ce que vous vouliez",las=2)
+summary(DTFormCustom$incertitude3 + 1)
+wilcox.test(DTFormCustom$incertitude3 + 1, mu = 3, alternative = "greater")
 
-psych::alpha(cbind(DTForm$espace1 + 1, DTForm$espace2 + 1, DTForm$espace3 + 1), keys = c(1, -1, -1))
+psych::alpha(cbind(DTFormCustom$incertitude1 + 1, DTFormCustom$incertitude2 + 1, DTFormCustom$incertitutde3 + 1), keys = c(1, -1, -1))
+
+
+barplot(table(DTFormCustom$espace1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez trouvé la partie riche et variée",las=2)
+summary(DTFormCustom$espace1 + 1)
+wilcox.test(DTFormCustom$espace1 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTFormCustom$espace2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes ennuyé durant la partie",las=2)
+summary(DTFormCustom$espace2 + 1)
+wilcox.test(DTFormCustom$espace2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTFormCustom$espace3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez manqué de choses à voir ou à faire",las=2)
+summary(DTFormCustom$espace3 + 1)
+wilcox.test(DTFormCustom$espace3 + 1, mu = 3, alternative = "less")
+
+psych::alpha(cbind(DTFormCustom$espace1 + 1, DTFormCustom$espace2 + 1, DTFormCustom$espace3 + 1), keys = c(1, -1, -1))
 
 ```
 
 ####Q3: Questionnaire narratif
 
 ```{r echo=FALSE}
-barplot(table(DTForm$narratif1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous pouviez vous voir à la place du personnage que vous contrôliez",las=2)
-summary(DTForm$narratif1 + 1)
-wilcox.test(DTForm$narratif1 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous pouviez vous voir à la place du personnage que vous contrôliez",las=2)
+summary(DTFormCustom$narratif1 + 1)
+wilcox.test(DTFormCustom$narratif1 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous avez pensé à ce qui se passait autour de vous dans la pièce",las=2)
-summary(DTForm$narratif2 + 1)
-wilcox.test(DTForm$narratif2 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$narratif2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous avez pensé à ce qui se passait autour de vous dans la pièce",las=2)
+summary(DTFormCustom$narratif2 + 1)
+wilcox.test(DTFormCustom$narratif2 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$narratif3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous étiez occupé par les événements qui s'y déroulaient",las=2)
-summary(DTForm$narratif3 + 1)
-wilcox.test(DTForm$narratif3 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous étiez occupé par les événements qui s'y déroulaient",las=2)
+summary(DTFormCustom$narratif3 + 1)
+wilcox.test(DTFormCustom$narratif3 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après que la partie se soit terminée il était facile de l'oublier",las=2)
-summary(DTForm$narratif4 + 1)
-wilcox.test(DTForm$narratif4 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$narratif4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après que la partie se soit terminée il était facile de l'oublier",las=2)
+summary(DTFormCustom$narratif4 + 1)
+wilcox.test(DTFormCustom$narratif4 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$narratif5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vouliez continuer à jouer pour connaître la suite des événements",las=2)
-summary(DTForm$narratif5 + 1)
-wilcox.test(DTForm$narratif5 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vouliez continuer à jouer pour connaître la suite des événements",las=2)
+summary(DTFormCustom$narratif5 + 1)
+wilcox.test(DTFormCustom$narratif5 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été marqué par les événements de la partie",las=2)
-summary(DTForm$narratif6 + 1)
-wilcox.test(DTForm$narratif6 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été marqué par les événements de la partie",las=2)
+summary(DTFormCustom$narratif6 + 1)
+wilcox.test(DTFormCustom$narratif6 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé aux événements et aux décisions qui auraient pu changer votre partie",las=2)
-summary(DTForm$narratif7 + 1)
-wilcox.test(DTForm$narratif7 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé aux événements et aux décisions qui auraient pu changer votre partie",las=2)
+summary(DTFormCustom$narratif7 + 1)
+wilcox.test(DTFormCustom$narratif7 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé à autre chose qu\'à la partie durant celle-ci",las=2)
-summary(DTForm$narratif8 + 1)
-wilcox.test(DTForm$narratif8 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$narratif8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé à autre chose qu\'à la partie durant celle-ci",las=2)
+summary(DTFormCustom$narratif8 + 1)
+wilcox.test(DTFormCustom$narratif8 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$narratif9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un objet",las=2)
-summary(DTForm$narratif9 + 1)
-wilcox.test(DTForm$narratif9 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$narratif9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un objet",las=2)
+summary(DTFormCustom$narratif9 + 1)
+wilcox.test(DTFormCustom$narratif9 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$narratif10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un lieu",las=2)
-summary(DTForm$narratif10 + 1)
-wilcox.test(DTForm$narratif10 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$narratif10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un lieu",las=2)
+summary(DTFormCustom$narratif10 + 1)
+wilcox.test(DTFormCustom$narratif10 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$narratif11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un personnage du jeu",las=2)
-summary(DTForm$narratif11 + 1)
-wilcox.test(DTForm$narratif11 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$narratif11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un personnage du jeu",las=2)
+summary(DTFormCustom$narratif11 + 1)
+wilcox.test(DTFormCustom$narratif11 + 1, mu = 3, alternative = "greater")
 ```
 
 ####Q4: Questionnaire sur les processus
 
 ```{r echo=FALSE}
-barplot(table(DTForm$processus1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Compagnon",las=2)
-summary(DTForm$processus1 + 1)
-wilcox.test(DTForm$processus1 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Compagnon",las=2)
+summary(DTFormCustom$processus1 + 1)
+wilcox.test(DTFormCustom$processus1 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Roi des lapins",las=2)
-summary(DTForm$processus2 + 1)
-wilcox.test(DTForm$processus2 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Roi des lapins",las=2)
+summary(DTFormCustom$processus2 + 1)
+wilcox.test(DTFormCustom$processus2 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Les autres",las=2)
-summary(DTForm$processus3 + 1)
-wilcox.test(DTForm$processus3 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Les autres",las=2)
+summary(DTFormCustom$processus3 + 1)
+wilcox.test(DTFormCustom$processus3 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le compagnon lorsqu'il n'était pas devant vous",las=2)
-summary(DTForm$processus4 + 1)
-wilcox.test(DTForm$processus4 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le compagnon lorsqu'il n'était pas devant vous",las=2)
+summary(DTFormCustom$processus4 + 1)
+wilcox.test(DTFormCustom$processus4 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le roi des lapins lorsqu'il n'était pas devant vous",las=2)
-summary(DTForm$processus5 + 1)
-wilcox.test(DTForm$processus5 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le roi des lapins lorsqu'il n'était pas devant vous",las=2)
+summary(DTFormCustom$processus5 + 1)
+wilcox.test(DTFormCustom$processus5 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait les autres lorsqu'ils n'étaient pas devant vous",las=2)
-summary(DTForm$processus6 + 1)
-wilcox.test(DTForm$processus6 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait les autres lorsqu'ils n'étaient pas devant vous",las=2)
+summary(DTFormCustom$processus6 + 1)
+wilcox.test(DTFormCustom$processus6 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Compagnon",las=2)
-summary(DTForm$processus7 + 1)
-wilcox.test(DTForm$processus7 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Compagnon",las=2)
+summary(DTFormCustom$processus7 + 1)
+wilcox.test(DTFormCustom$processus7 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Roi des lapins",las=2)
-summary(DTForm$processus8 + 1)
-wilcox.test(DTForm$processus8 + 1, mu = 3, alternative = "two.sided")
+barplot(table(DTFormCustom$processus8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Roi des lapins",las=2)
+summary(DTFormCustom$processus8 + 1)
+wilcox.test(DTFormCustom$processus8 + 1, mu = 3, alternative = "two.sided")
 
-barplot(table(DTForm$processus9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Les autres",las=2)
-summary(DTForm$processus9 + 1)
-wilcox.test(DTForm$processus9 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$processus9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Les autres",las=2)
+summary(DTFormCustom$processus9 + 1)
+wilcox.test(DTFormCustom$processus9 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$processus10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Compagnon il était difficile de se souvenir ce que j'étais en train de faire",las=2)
-summary(DTForm$processus10 + 1)
-wilcox.test(DTForm$processus10 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$processus10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Compagnon il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTFormCustom$processus10 + 1)
+wilcox.test(DTFormCustom$processus10 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$processus11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Roi des lapins il était difficile de se souvenir ce que j'étais en train de faire",las=2)
-summary(DTForm$processus11 + 1)
-wilcox.test(DTForm$processus11 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$processus11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Roi des lapins il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTFormCustom$processus11 + 1)
+wilcox.test(DTFormCustom$processus11 + 1, mu = 3, alternative = "greater")
 
-barplot(table(DTForm$processus12 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Les autres il était difficile de se souvenir ce que j'étais en train de faire",las=2)
-summary(DTForm$processus12 + 1)
-wilcox.test(DTForm$processus12 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$processus12 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Les autres il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTFormCustom$processus12 + 1)
+wilcox.test(DTFormCustom$processus12 + 1, mu = 3, alternative = "greater")
 
 ## TODO prefere et pourquoi
 
-barplot(table(DTForm$processus15 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
-summary(DTForm$processus15 + 1)
-wilcox.test(DTForm$processus15 + 1, mu = 3, alternative = "less")
+barplot(table(DTFormCustom$processus15 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTFormCustom$processus15 + 1)
+wilcox.test(DTFormCustom$processus15 + 1, mu = 3, alternative = "less")
 
-barplot(table(DTForm$processus16 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Roi des lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
-summary(DTForm$processus16 + 1)
-wilcox.test(DTForm$processus16 + 1, mu = 3, alternative = "two.sided")
+barplot(table(DTFormCustom$processus16 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Roi des lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTFormCustom$processus16 + 1)
+wilcox.test(DTFormCustom$processus16 + 1, mu = 3, alternative = "two.sided")
 
-barplot(table(DTForm$processus17 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
-summary(DTForm$processus17 + 1)
-wilcox.test(DTForm$processus17 + 1, mu = 3, alternative = "greater")
+barplot(table(DTFormCustom$processus17 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTFormCustom$processus17 + 1)
+wilcox.test(DTFormCustom$processus17 + 1, mu = 3, alternative = "greater")
 
 ```
 
